@@ -1,3 +1,10 @@
+2020-09-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/spdlog/*: Upgraded to upstream release 1.8.0
+	* inst/include/spdlog/logger-inl.h: Switch to REprintf as before
+
+	* .travis.yml: Use BSPM, turn os macOS
+
 2020-09-08  Dirk Eddelbuettel  <edd@debian.org>
 
  	* DESCRIPTION (Version, Date): Version 0.0.1
